# cppbackend

.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: http_server.cpp  request_handler.h
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: http_server.h  json_loader.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: file_handler.cpp  json_loader.cpp  main.cpp  model.h  request_handler.h
sprint2/problems/game_state/solution/src/: json_loader.h  request_handler.h
sprint2/problems/join_game/solution/src/: logger.h  main.cpp  model.h  request_handler.h
sprint2/problems/logger/solution/: CMakeLists.txt  my_logger.h
sprint2/problems/move_players/solution/src/: model.h  request_handler.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/static_content/solution/src/: main.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: json_loader.cpp  request_handler.h
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/final_task/solution/: CMakeLists.txt
sprint3/problems/final_task/solution/src/: json_loader.cpp  request_handler.h
sprint3/problems/final_task/solution/tests/: test_json_loader.cpp  test_player.cpp
sprint3/problems/find_return/solution/src/: http_server.cpp  json_loader.cpp  json_loader.h  loot_generator.cpp  model.h  request_handler.h
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/src/: json_loader.cpp  main.cpp  model.h  request_handler.h
sprint3/problems/instrumentation/precode/v0/: events2dot
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: main.cpp  model.h
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/data/: config.json
sprint3/problems/static_lib/solution/src/: logging_request_handler.h  loot_generator.cpp
sprint3/problems/urldecode/solution/src/: urldecode.cpp
sprint3/problems/urldecode/solution/tests/: tests.cpp
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/src/: bookypedia.h
sprint4/problems/bookypedia-1/solution/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-1/solution/src/domain/: author.h  book.h
sprint4/problems/bookypedia-1/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-1/solution/src/ui/: view.cpp
sprint4/problems/bookypedia-1/solution/tests/: use_case_tests.cpp
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/src/: bookypedia.cpp  bookypedia.h  main.cpp
sprint4/problems/bookypedia-2/solution/src/app/: unit_of_work.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-2/solution/src/domain/: author.h  author_fwd.h  book.cpp  book.h  book_fwd.h  tag.h
sprint4/problems/bookypedia-2/solution/src/menu/: menu.cpp  menu.h
sprint4/problems/bookypedia-2/solution/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  CmakeLists.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/leave_game/solution/data/: config.json
sprint4/problems/leave_game/solution/src/: collision_detector.h  database.cpp  database.h  file_handler.cpp  file_handler.h  http_server.h  json_loader.cpp  json_loader.h  logger.h  loot_generator.cpp  loot_generator.h  main.cpp  model.h  request_handler.h  state_serialization.h
sprint4/problems/leave_game/solution/tests/: test_json_loader.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/src/: file_handler.h  http_server.h  json_loader.h  main.cpp  model.h  request_handler.h  state_serialization.h  ticker.h
sprint4/problems/state_serialization/solution/tests/: test_main.cpp
(+9 files in other folders)
